framec_tests/language_specific/cpp/v3_outline/negative/test_action_with_frame.frm
@target cpp

system S {
    actions:
        doIt() {
            -> $Y
        }
}
